--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=walkproject
+spring.application.name=walkProject
+
+#spring.datasource.url=jdbc:mysql://localhost:3308/walkProject <- ??? ??
+spring.datasource.url=jdbc:mysql://localhost:3308/walkProject 
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+#?? Database? ??? ???? ??
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
